--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/fleet
+spring.datasource.username=dronepilot
+spring.datasource.password=dronepilot
